# tushare-mcp

./: README.md  pyproject.toml
src/tushare_mcp/: config.py  server.py  tushare_client.py
src/tushare_mcp/tools/: __init__.py  bar_tools.py  export_tools.py  generic.py  supported_tools.py  time_tools.py
tests/: test_import.py
